[tool.poetry]
name = "wraptor"
version = "1.1.0"
description = "CLI wrapper for automatic installation of Python tooling"
authors = ["Houbie <ivo@houbrechts-it.be>"]

[tool.poetry.dependencies]
python = ">=3.6, <4.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
# idealy pylint should not be in here, but it is required by the intellij plugin
pylint = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.pylint.format]
max-line-length = 120
variable-rgx = '^[a-z_][a-z0-9_]*$'
[tool.pylint.messages_control]
disable = [
    "missing-docstring",
    "unspecified-encoding"
]
[tool.wraptor]
poetry = "poetry==1.1.11"
black = "black==21.9b0"
pre-commit = "pre-commit"

[tool.wraptor.alias]
run = "poetry run"
install = "poetry install"
test = "poetry run pytest"
check-pylint = "poetry run pylint pw tests"

check = "&: test check-pylint"
build = "&: install check"

git-push = "!: git push"
release = "&: build git-push"
