[tool.poetry]
name = "wraptor"
version = "2.0.0"
description = "CLI wrapper for automatic installation of Python tooling"
authors = ["Houbie <ivo@houbrechts-it.be>"]

[tool.poetry.dependencies]
python = ">=3.6, <4.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
# idealy pylint should not be in here, but it is required by the intellij plugin
pylint = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.pylint.format]
max-line-length = 120
variable-rgx = '^[a-z_][a-z0-9_]*$'
[tool.pylint.messages_control]
disable = [
    "missing-docstring",
    "unspecified-encoding"
]
[tool.wraptor]
poetry = "poetry==1.1.11"
black = "black==21.9b0"
pre-commit = "pre-commit"

[tool.wraptor.alias]
clean-install = "rm -rf .venv && rm -rf .pytest_cache && ./pw poetry install --pw-clear-all && ./pw pre-commit install"
install = "poetry install"
test = "poetry run pytest"
check-pylint = "poetry run pylint pw tests"
black = "black pw tests"
check = "./pw test && ./pw check-pylint"
build = "./pw install && ./pw check"
commit = "./pw build && git commit"
